# pool-allocator

./: .gitignore  AGENTS.md  README.md  meson.build  meson_options.txt
.github/workflows/: ci.yml
include/: pool.h
src/: pool.c
tests/: meson.build  test_pool.c
